<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>space.arim.injector</groupId>
	<artifactId>injector</artifactId>
	<version>1.0.0-M2</version>
	
	<name>SolidInjector</name>
	<description>Modern and lightweight injector supporting javax and jarkarta.</description>
	<url>https://github.com/A248/SolidInjector</url>
	<inceptionYear>2020</inceptionYear>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<junit.version>5.7.0</junit.version>
		<slf4j.version>1.7.30</slf4j.version>

		<jakarta-inject.version>2.0.0</jakarta-inject.version>
		<javax-inject.version>1.0.0</javax-inject.version>
	</properties>
	
	<scm>
		<connection>scm:git:git://github.com/A248/SolidInjector.git</connection>
		<developerConnection>scm:git:ssh://github.com:A248/SolidInjector.git</developerConnection>
		<url>http://github.com/A248/SolidInjector/tree/master</url>
	</scm>
	
	<licenses>
		<license>
			<name>GNU Lesser General Public License, Version 3</name>
			<url>https://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<developers>
		<developer>
			<id>anandbeh</id>
			<name>Anand Beh</name>
			<url>https://www.arim.space</url>
			<roles>
				<role>creator</role>
				<role>developer</role>
			</roles>
			<timezone>America/New_York</timezone>
		</developer>
	</developers>
	
	<distributionManagement>
		<repository>
			<id>cloudsmith-deploy</id>
			<url>https://maven.cloudsmith.io/anand-beh/lesser-gpl3/</url>
		</repository>
		<snapshotRepository>
			<id>cloudsmith-deploy</id>
			<url>https://maven.cloudsmith.io/anand-beh/lesser-gpl3/</url>
		</snapshotRepository>
	</distributionManagement>
	
	<build>
		<plugins>
			<!-- JAR creation -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
				<executions>
					<execution>
						<id>default-compile</id>
						<configuration>
							<source>11</source>
							<target>11</target>
						</configuration>
					</execution>
					<execution>
						<id>base-compile</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>module-info.java</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>default-testCompile</id>
						<configuration>
							<source>11</source>
							<target>11</target>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			<!-- Testing -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<trimStackTrace>false</trimStackTrace>
					<argLine>-Xverify:none -XX:TieredStopAtLevel=1 -XX:-TieredCompilation
					--add-modules jakarta.inject,javax.inject
					--add-opens space.arim.injector/space.arim.injector.internal.spec=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>

			<!-- Sources and javadoc -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<source>8</source>
					<excludePackageNames>space.arim.injector.internal:space.arim.injector.internal.*</excludePackageNames>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>javadoc</goal>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>
		<!-- Both dependencies are optional, so users can choose between them. -->
		<dependency>
			<groupId>javax.inject</groupId>
			<artifactId>javax.inject</artifactId>
			<version>1</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>jakarta.inject</groupId>
			<artifactId>jakarta.inject-api</artifactId>
			<version>2.0.0</version>
			<optional>true</optional>
		</dependency>

		<!-- Test dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency> <!-- Junit Vintage is needed for TCK -->
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.inject</groupId>
			<artifactId>javax.inject-tck</artifactId>
			<version>1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>